<resources>
    <string name="app_name">Oktató App</string>
    <string name="login_title">Tanár/Diák Bejelentkezés/Regisztráció</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Belépés</string>
    <string name="register">Regisztráció</string>
    <string name="student">Diák</string>
    <string name="teacher">Tanár</string>
    <string name="learning">Tanulás</string>
    <string name="statistic">Statisztika</string>
    <string name="duel">Párbaj</string>
    <string name="teacher_id">Teacher ID</string>
    <string name="retryPassword">Jelszó újra</string>
    <string name="emailAddress">E-mail cím</string>
    <string name="firstName">Keresztnév</string>
    <string name="lastName">Családnév</string>
    <string name="lessons">Leckék</string>
    <string name="classes">Osztályok</string>
    <string name="error1">Ki kell választanod legalább az egyik menüpontot. Tanárként, vagy diákként szeretnél belépni?</string>
    <string name="check_connection">Kérlek ellenőrizd az internetkapcsolatod!</string>
</resources>
