<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">

        <LinearLayout
            android:id="@+id/modeSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <include
                android:id="@+id/studentBtn"
                layout="@layout/mode_select_button"
                android:src="@drawable/ic_student" />

            <include
                android:id="@+id/teacherBtn"
                layout="@layout/mode_select_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:src="@drawable/ic_teacher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/username_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modeSelect"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/username_ET"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_EditText"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_EditText">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/retryPassword_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_EditText"
            android:layout_marginBottom="148dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_EditText"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock" />

            <EditText
                android:id="@+id/retryPassword_ET"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:hint="@string/retryPassword"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="148dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retryPassword_EditText"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_round_email_24px"
                android:tint="@color/colorPrimary" />

            <EditText
                android:id="@+id/email_ET"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:hint="@string/emailAddress"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fistName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="148dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_EditText"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/firstName_ET"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:hint="@string/firstName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="148dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fistName_EditText"
            app:layout_constraintVertical_bias="0.0">


            <EditText
                android:id="@+id/lastName_ET"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:hint="@string/lastName" />
        </LinearLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="167dp"
            android:layout_height="78dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/register"
            style="@style/LoginButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName_EditText" />
    </android.support.constraint.ConstraintLayout>
    </ScrollView>
