<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentMenu">

    <ImageButton
        android:id="@+id/learning_Button"
        android:layout_width="233dp"
        android:layout_height="137dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/statistic_button"
        android:layout_width="233dp"
        android:layout_height="137dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/duel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learning_Button" />

    <ImageButton
        android:id="@+id/duel_button"
        android:layout_width="233dp"
        android:layout_height="137dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistic_button" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameDisplay_TextView"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/learning_textView"
        android:layout_width="123dp"
        android:layout_height="42dp"
        android:layout_marginEnd="32dp"
        android:text="@string/learning"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/learning_Button"
        app:layout_constraintEnd_toEndOf="@+id/learning_Button"
        app:layout_constraintTop_toTopOf="@+id/learning_Button"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:id="@+id/statistic_textView"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:text="@string/statistic"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/statistic_button"
        app:layout_constraintEnd_toEndOf="@+id/statistic_button"
        app:layout_constraintStart_toEndOf="@+id/statisticIcon_ImgView"
        app:layout_constraintTop_toTopOf="@+id/statistic_button"
        app:layout_constraintVertical_bias="0.531" />

    <TextView
        android:id="@+id/duel_textView"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:text="@string/duel"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/duel_button"
        app:layout_constraintEnd_toEndOf="@+id/duel_button"
        app:layout_constraintTop_toTopOf="@+id/duel_button" />

    <ImageView
        android:id="@+id/learningIcon_ImgView"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/learning_Button"
        app:layout_constraintEnd_toStartOf="@+id/learning_textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/learning_Button"
        app:layout_constraintTop_toTopOf="@+id/learning_Button"
        app:srcCompat="@drawable/ic_lightbulb" />

    <ImageView
        android:id="@+id/statisticIcon_ImgView"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/statistic_button"
        app:layout_constraintStart_toStartOf="@+id/statistic_button"
        app:layout_constraintTop_toTopOf="@+id/statistic_button"
        app:srcCompat="@drawable/ic_poll" />

    <ImageView
        android:id="@+id/duelIcon_ImgView"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/duel_button"
        app:layout_constraintEnd_toStartOf="@+id/duel_textView"
        app:layout_constraintStart_toStartOf="@+id/duel_button"
        app:layout_constraintTop_toTopOf="@+id/duel_button"
        app:srcCompat="@drawable/ic_sword_cross" />

    <ImageView
        android:id="@+id/studentIcon_ImgView"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/usernameDisplay_TextView"
        app:layout_constraintEnd_toStartOf="@+id/usernameDisplay_TextView"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/ic_face" />


</android.support.constraint.ConstraintLayout>